== Version 0.57 10/05/2008 ==

* Another fix to the pre-Wrath flightpath issues

== Version 0.56 10/04/2008 ==

* Added error logging and built-in error catching so I can find some of these damn bugs
* Added "/qh hardreset" so I can stop saying "please wander around your filesystem and delete random files, try not to delete the wrong ones plzkthx"
* Fixed huge memory consumption

== Version 0.55 10/03/2008 ==

* Filtered some data from private servers, and rigged the plugin to automatically cull data when private servers are detected
* Added a little instrumentation to hopefully provide easier future detection of private-server-polluted data files
* Made the plugin more tolerant of being updated while the client is running
* Fixed a graphical glitch involving multiple quests in the tracker with the same objective

== Version 0.54 09/30/2008 ==

* Fixed bug that made QuestHelper break if you *weren't a druid*. Oh man. Don't even ask. As a side note, I bet you can guess what class my standard test character is. (I will be testing on two characters in the future.)

== Version 0.53 09/29/2008 ==

* Fix the timed-quest crash, hopefully
* Merge in more wotlk data

== Version 0.52 09/27/2008 ==

* Add teleporter paths for Dalaran
* Add a bit of compression to static.lua. This probably won't reduce memory use, but may reduce load times and package size. Reduced size by about 25%

== Version 0.51 09/25/2008 ==

* Support for 3.0 and for Wrath! (you can stop reading now, it doesn't get any better than that)
* Another attempt at detecting the timed-quest crash
* French language update
* Fixed a bug involving zoning in the middle of flight paths
* Added detection for zoning flight paths so that old corrupt data can be removed

== Version 0.50 09/22/2008 ==

* Memory leak should now be fixed.

== Version 0.49 09/21/2008 ==

* Most importantly: project has been resurrected by me. Let's have it for regular updates again!