@@ -1,6 +1,7 @@
 == Version 0.57 10/05/2008 ==
 
 * Another fix to the pre-Wrath flightpath issues
+* Clean up some obsolete function parameters
 
 == Version 0.56 10/04/2008 ==
 
